--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
           <ion-icon slot="start" name="home-outline"></ion-icon>Inicio
         </ion-item>
         <ion-item lines="none" [routerLink]="['/reg-alumno']">
-          <ion-icon slot="start" name="person-outline"></ion-icon>Registro Alumno
+          <ion-icon slot="start" name="school-outline"></ion-icon>Registro Alumno
         </ion-item>
         <ion-item lines="none" [routerLink]="['/about']">
           <ion-icon slot="start" name="people-outline"></ion-icon>Conocenos
@@ -22,6 +22,9 @@
         </ion-item>
         <ion-item lines="none" [routerLink]="['/clima']">
           <ion-icon slot="start" name="cloud-outline"></ion-icon>Clima
+        </ion-item>
+        <ion-item lines="none" [routerLink]="['/crud']">
+          <ion-icon slot="start" name="cube-outline"></ion-icon>Crud
         </ion-item>
         <ion-item lines="none" (click)="salir()" routerDirection="root">
           <ion-icon slot="start" name="exit-outline"></ion-icon>Salir
