--- a/src/app/pages/reg-alumno/reg-alumno.page.html
+++ b/src/app/pages/reg-alumno/reg-alumno.page.html
@@ -48,7 +48,7 @@
 
 <ion-item class="usuariosInput">
   <ion-label position="stacked" >Imagen:</ion-label>
-<ion-input type="url" [(ngModel)]="newUsuarios.imagen" ></ion-input>
+<ion-input type="text" [(ngModel)]="newUsuarios.imagen" ></ion-input>
 </ion-item>
 
 <ion-item class="usuariosInput">
