--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
-<app-header>
+<ion-header>
   <ion-toolbar color="dark">
     <ion-title class="container">login</ion-title>
   </ion-toolbar>
-</app-header>
+</ion-header>
 
 <ion-content>
   <ion-card>
@@ -23,6 +23,10 @@
 
       <ion-button expand="block" (click)="login()">
         Iniciar Sesion
+      </ion-button>
+      <br>
+      <ion-button expand="block" (click)="register()">
+        Crear Cuenta
       </ion-button>
     </div>
   </ion-card>
