--- a/src/app/pages/crud/crud.page.html
+++ b/src/app/pages/crud/crud.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [pageTitle]="pageTitle"></app-header>
 
 <ion-content>
   <ion-item *ngFor="let alumnos of usuario">
