--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -17,14 +17,13 @@
       </ion-item><br>
     
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="floating">Contraseña</ion-label>
         <ion-input [(ngModel)]="credenciales.password" type="password"></ion-input>
       </ion-item><br>
 
       <ion-button expand="block" (click)="login()">
         Iniciar Sesion
       </ion-button>
-      <br>
       <ion-button expand="block" (click)="register()">
         Crear Cuenta
       </ion-button>
