--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
         <ion-item lines="none" [routerLink]="['/home']">
           <ion-icon slot="start" name="home-outline"></ion-icon>Inicio
         </ion-item>
-        <ion-item lines="none" [routerLink]="['/reg-alumno']">
-          <ion-icon slot="start" name="school-outline"></ion-icon>Registro Alumno
+        <ion-item lines="none" [routerLink]="['/perfil']">
+          <ion-icon slot="start" name="person-outline"></ion-icon>Mi Perfil
         </ion-item>
         <ion-item lines="none" [routerLink]="['/about']">
           <ion-icon slot="start" name="people-outline"></ion-icon>Conocenos
