--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,5 +3,10 @@
   
 
 <ion-content [fullscreen]="true">
-    
+    <ion-card>
+        <ion-card-title>
+            <h1>Bienvenido a RegistrApp!</h1>
+        </ion-card-title>
+        <ion-img src="../../../assets/img/registrappimage.PNG"></ion-img>
+    </ion-card>
 </ion-content>
