--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -48,9 +48,7 @@
 
       </ion-card-list>
 
-      <ion-button fill="outline" expand="block" (click)="openDetailUsuario(info)">
-        <ion-icon name="create-outline"></ion-icon>Editar Perfil
-      </ion-button>
+      <ion-button expand="block" (click)="openDetailUsuario(info)">Editar mi perfil</ion-button>
       
    </ion-card-content>
   </ion-card>
