--- a/src/app/components/perfil/perfil.component.scss
+++ b/src/app/components/perfil/perfil.component.scss
@@ -16,12 +16,12 @@ ion-label, ion-card-title{
 }
 
 ion-button {
-  --background: #ffffff;
-  --background-hover: #ffffff;
-  --background-activated: #ffffff;
-  --background-focused: #ffffff;
+  --background: #128bfc;
+  --background-hover: #128bfc;
+  --background-activated: #128bfc;
+  --background-focused: #128bfc;
 
-  --color: black;
+  --color: rgb(255, 255, 255);
 
   --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
 
