kommit maybe last

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,34 +2,47 @@
   <ion-menu contentId="main">
 
     <ion-header>
+
       <ion-toolbar color="dark">
         <ion-title>Menu</ion-title>
       </ion-toolbar>
+
     </ion-header>
+
     <ion-content>
+
       <ion-list>
+
         <ion-item lines="none" [routerLink]="['/home']">
           <ion-icon slot="start" name="home-outline"></ion-icon>Inicio
         </ion-item>
+
         <ion-item lines="none" [routerLink]="['/perfil']">
           <ion-icon slot="start" name="person-outline"></ion-icon>Mi Perfil
         </ion-item>
+
+        <ion-item lines="none" [routerLink]="['/qr']">
+          <ion-icon slot="start" name="qr-code"></ion-icon>QR
+        </ion-item>
+
         <ion-item lines="none" [routerLink]="['/about']">
           <ion-icon slot="start" name="people-outline"></ion-icon>Conocenos
         </ion-item>
+
         <ion-item lines="none" [routerLink]="['/coversor']">
           <ion-icon slot="start" name="cash-outline"></ion-icon>Conversor
         </ion-item>
+
         <ion-item lines="none" [routerLink]="['/clima']">
           <ion-icon slot="start" name="cloud-outline"></ion-icon>Clima
         </ion-item>
-        <ion-item lines="none" [routerLink]="['/crud']">
-          <ion-icon slot="start" name="cube-outline"></ion-icon>Crud
-        </ion-item>
+
         <ion-item lines="none" (click)="salir()" routerDirection="root">
           <ion-icon slot="start" name="exit-outline"></ion-icon>Salir
         </ion-item>
+
       </ion-list>
+
     </ion-content>
 
   </ion-menu>
