--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -34,3 +34,19 @@
   height: 50px;
   width: 50px;
 }
+
+.avatar{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.no-avatar{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #bababa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
